# LP-Solver-for-Bipartite-Graph-Matching

./: .gitignore  CMakeLists.txt  README.md  requirements.txt  run_full_benchmark_pipeline.ipynb
graphs/: n00064_d050_s01.graph  n00064_d050_s02.graph  n00128_d050_s01.graph  n00256_d050_s00.graph  n00256_d050_s02.graph
mcbp-experiment/: CMakeLists.txt  run_full_benchmark.ipynb
mcbp-experiment/graphs/: n00064_d050_s00.graph  n00128_d050_s00.graph  n00128_d050_s02.graph  n00256_d050_s01.graph
mcbp-experiment/python/: generate_graphs.py  plot_results.py  run_experiments.py  validate_results.py
mcbp-experiment/python/solvers/: _common.py  highs_lp.py
mcbp-experiment/results/: results.csv
mcbp-experiment/src/: gurobi_lp.cpp  highs_lp.cpp
mcbp-visualizer/: .gitignore  package-lock.json  package.json  tailwind.config.ts
mcbp-visualizer/app/: globals.css  layout.tsx  page.tsx
mcbp-visualizer/components/: ComparisonTable.tsx  ControlsPanel.tsx  Header.tsx  StepExplanation.tsx  Visualization.tsx  VisualizerApp.tsx
mcbp-visualizer/components/AlgorithmPanel/: AlgorithmPanel.tsx  GreedyPanel.tsx  HopcroftKarpPanel.tsx  LPPanel.tsx
mcbp-visualizer/components/ui/: button.tsx  dialog.tsx  slider.tsx
mcbp-visualizer/hooks/: useAnimationPlayer.ts
mcbp-visualizer/lib/: appState.ts  graph.ts  layout.ts  types.ts
mcbp-visualizer/lib/algorithms/: greedy.ts  hopcroftKarp.ts  lp.ts
mcbp-visualizer/types/: react-katex.d.ts
python/: generate_graphs.py  migrate_v1_results.py  plot_results.py  run_experiments.py  test_solvers.py  validate_results.py  visualize_graph.py  visualize_graph_animated.py
python/solvers/: __init__.py  _common.py  cplex_lp.py  gurobi_lp.py  highs_lp.py  lemon_hk.py  scipy_lp.py
results/: results.csv
src/: cplex_lp.cpp  graph_io.hpp  lemon_hk.cpp
